<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <group android:checkableBehavior="single">
        <item
            android:id="@+id/my_bookmarks"
            android:title="My Bookmarks"
            android:icon="@drawable/ic_bookmark" />
        <item
            android:id="@+id/general_chatroom"
            android:title="General Chatroom"
            android:icon="@drawable/ic_general_chatroom" />
        <item
            android:id="@+id/course_chatrooms"
            android:title="Course Chatrooms"
            android:icon="@drawable/ic_course_chatrooms"
            android:enabled="false" />
    </group>


</menu>