<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/chatroom"
        android:title="Chatroom"
        android:icon="@drawable/ic_chatroom" />

    <item
        android:id="@+id/private_message"
        android:title="PM"
        android:icon="@drawable/ic_pm" />

    <item
        android:id="@+id/setting"
        android:title="Setting"
        android:icon="@drawable/ic_setting" />

</menu>