<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_center_title"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        app:title=""
        android:background="@color/background_color_toolbar"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme">

        <TextView
            android:id="@+id/tv_toolbar_center_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Login"
            android:textColor="@color/text_color"
            style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
            android:layout_gravity="center" />

    </androidx.appcompat.widget.Toolbar>

    <View
        android:background="@color/gray_D5"
        android:layout_width="match_parent"
        android:layout_height="1dp" />


</LinearLayout>