...
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_pm"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:theme="@style/Theme.MaterialComponents.DayNight"
        app:cardBackgroundColor="@color/card_color"
        android:clickable="true"
        android:focusable="true"
...
